Basic mods to get working with Jekyll 3+

--- a/_config.yml
+++ b/_config.yml
@@ -1,26 +1,21 @@
 # Dependencies
-markdown:         redcarpet
-highlighter:      pygments
+gems:             [jekyll-paginate]
 
 # Permalinks
 permalink:        pretty
-relative_permalinks: true
 
 # Setup
-title:            Hyde
-tagline:          'A Jekyll theme'
-description:      'A brazen two-column <a href="http://jekyllrb.com" target="_blank">Jekyll</a> theme that pairs a prominent sidebar with uncomplicated content. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
-url:              http://hyde.getpoole.com
+title:            "Pete Peterson"
+tagline:          "Pete Peterson Music"
+description:      ""
+url:              http://petepetersonmusic.com
 baseurl:          /
 
 author:
-  name:           'Mark Otto'
-  url:            https://twitter.com/mdo
+  name:           "Pete Peterson"
+  url:            https://twitter.com/petepppeterson
 
 paginate:         5
 
-# Custom vars
-version:          2.1.0
-
 github:
-  repo:           https://github.com/poole/hyde
+  repo:           https://github.com/petepm/petepm.github.io
