Add social media icons; resolves #4

--- a/_config.yml
+++ b/_config.yml
@@ -20,3 +20,11 @@ paginate:         5
 
 github:
   repo:           https://github.com/petepm/petepm.github.io
+
+twitter_username: petepppeterson
+github_username: petepm
+instagram_username: petepppeterson
+facebook_username: petepetersonmusic
+youtube_username: petepetersonmusic
+soundcloud_username: petepetersonmusic
+bandcamp_username: petepeterson
