--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ permalink:        pretty
 title:            "Pete Peterson"
 tagline:          "Pete Peterson Music"
 description:      ""
-url:              http://petepetersonmusic.com
+url:              https://petepetersonmusic.com
 baseurl:          /
 permalink:        /:title
 
