Revert "Remove baseurl from config"
This reverts commit 5fec79ee5c59e9582f620919363af158a90b9053.

--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,7 @@ title:            "Pete Peterson"
 tagline:          "Pete Peterson Music"
 description:      ""
 url:              https://petepetersonmusic.com
+baseurl:          /
 permalink:        /:title
 
 author:
