--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ title:            "Pete Peterson"
 tagline:          "Pete Peterson Music"
 description:      ""
 url:              https://petepetersonmusic.com
-baseurl:          "/"
+baseurl:          https://petepetersonmusic.com/
 permalink:        /:title
 
 author:
