Fix threads username

--- a/_config.yml
+++ b/_config.yml
@@ -28,4 +28,4 @@ facebook_username: petepetersonmusic
 youtube_username: petepetersonmusic
 soundcloud_username: petepetersonmusic
 bandcamp_username: petepeterson
-threads_username: petepm
+threads_username: petep.me
