Make all social links open blank tabs

--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ github:
 github_username: petepm
 instagram_username: petep.me
 facebook_username: petepetersonmusic
-youtube_username: petepetersonmusic
+youtube_username: "@petep"
 soundcloud_username: petepetersonmusic
 bandcamp_username: petepeterson
 threads_username: petep.me
