Add more socials

--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,10 @@ github:
 github_username: petepm
 instagram_username: petep.me
 facebook_username: petepetersonmusic
-youtube_username: "@petep"
+youtube_username: petep
 soundcloud_username: petepetersonmusic
 bandcamp_username: petepeterson
 threads_username: petep.me
+spotify_url: https://open.spotify.com/artist/1RwqdFQvLZmq7AMsJhTbxL?si=uF297gYLQd-kRCdwkv-w7Q
+apple_music_url: https://music.apple.com/us/artist/pete-peterson/20385570
+tiktok_username: petep.me
