Drop facebook and soundcloud links

--- a/_config.yml
+++ b/_config.yml
@@ -24,9 +24,9 @@ github:
 # Social
 github_username: petepm
 instagram_username: petep.me
-facebook_username: petepetersonmusic
+facebook_username:
 youtube_username: petep
-soundcloud_username: petepetersonmusic
+soundcloud_username:
 bandcamp_username: petepeterson
 threads_username: petep.me
 spotify_url: https://open.spotify.com/artist/1RwqdFQvLZmq7AMsJhTbxL?si=uF297gYLQd-kRCdwkv-w7Q
